# oe_annotator

./: LICENSE.txt  Makefile  PACKAGING.md  README.md  build_macos.sh  build_windows.bat  pyproject.toml
help/: annotation-guide.md  export-formatting.md  incremental-annotation.md  troubleshooting.md
oeapp/: __init__.py  db.py  exc.py  main.py  mixins.py  utils.py
oeapp/etc/: migration_versions.json
oeapp/models/: __init__.py  annotation.py  note.py  project.py  sentence.py  token.py
oeapp/models/alembic/versions/: 57399ca978ee_initial_schema.py  58e7d5ea71cd_pronoun_number.py  a1b2c3d4e5f6_add_modern_english_meaning_and_root.py  merge_hyphenated_words.py
oeapp/services/: __init__.py  autosave.py  backup.py  commands.py  db.py  export_docx.py  filter.py  import_export.py  keymap.py  migration.py  splitter.py
oeapp/themes/: default.qss
oeapp/ui/: __init__.py  annotation_lookups.py  annotation_modal.py  application.py  dialogs.py  filter_dialog.py  help_dialog.py  main_window.py  menus.py  mixins.py  notes_panel.py  pos_filter_dialog.py  sentence_card.py  token_details_sidebar.py  token_table.py
oeapp/ui/dialogs/: __init__.py  annotation_modal.py  append_text.py  backups_view.py  case_filter.py  delete_project.py  help_dialog.py  import_project.py  migration_failure.py  mixins.py  new_project.py  note_dialog.py  open_project.py  pos_filter.py  restore.py  settings.py  utils.py
oeapp/ui/help/: annotation-guide.md  automatic-backups.md  export-formatting.md  keybindings.md  morphological-reference.md  notes-guide.md  project-export-import.md
src/oeapp/: main.py
src/oeapp/models/: annotation.py  note.py  project.py  sentence.py  token.py
src/oeapp/services/: autosave.py  commands.py  db.py  export_docx.py  filter.py  splitter.py
src/oeapp/ui/: annotation_modal.py  filter_dialog.py  help_dialog.py  main_window.py  notes_panel.py  sentence_card.py  token_table.py
tests/: __init__.py  conftest.py  test_annotation.py  test_annotation_modal.py  test_autosave.py  test_backup.py  test_commands.py  test_db.py  test_exc.py  test_export_docx.py  test_filter.py  test_hyphenated_word_migration.py  test_import_export.py  test_migration_backup_restore.py  test_mixins.py  test_note.py  test_project.py  test_sentence.py  test_sentence_card_selection.py  test_splitter.py  test_token.py  test_token_create.py  test_token_update.py  test_utils.py
